--- a/print.html
+++ b/print.html
@@ -1,51 +1,41 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>封筒印刷</title>
   <style>
     body {
-      font-family: "Yu Gothic", sans-serif;
-      margin: 100px 50px;
-      transform: rotate(90deg); /* A4封筒に合わせた回転 */
-      transform-origin: left top;
-      width: 297mm;
-      height: 210mm;
+      margin: 0;
+      padding: 0;
     }
-    .address {
-      font-size: 20pt;
-      line-height: 1.8;
+    #addressBox {
+      position: absolute;
+      top: 40%;
+      left: 20%;
+      transform: translate(-20%, -40%);
+      font-size: 24px;
       white-space: pre-line;
+      line-height: 1.6;
     }
   </style>
 </head>
 <body>
-  <div class="address" id="addressBox">読み込み中...</div>
+  <div id="addressBox">読み込み中...</div>
 
   <script>
-    async function fetchRecord() {
-      const urlParams = new URLSearchParams(window.location.search);
-      const id = urlParams.get("id");
-      console.log("取得するレコードID:", id);
-      const resp = await fetch("https://hz6n32v7pq52.cybozu.com/k/v1/record.json?app=171&id=" + id, {
-        headers: {
-          "X-Cybozu-API-Token": "19siJIolJVpiAhzsX3Wu2GQmZfRBsKE1pSEmi6dg"
-        }
-      });
-
-      console.log("API応答ステータス:", resp.status); 
-      const data = await resp.json();
-      console.log("取得したレコード内容:", data);
-      const r = data.record;
-
-      const addressText = `〒${r["postal_code"].value}\n${r["prefecture"].value}${r["city_and_area"].value}\n${r["会社名＿文字列"].value} 御中`;
-
-      document.getElementById("addressBox").innerText = addressText;
-
-      setTimeout(() => window.print(), 1000);
+    function getParam(name) {
+      return decodeURIComponent((new URLSearchParams(window.location.search)).get(name) || "");
     }
 
-    fetchRecord();
+    const postal = getParam("postal");
+    const prefecture = getParam("pref");
+    const city = getParam("city");
+    const company = getParam("company");
+
+    const addressText = `〒${postal}\n${prefecture}${city}\n${company} 御中`;
+    document.getElementById("addressBox").innerText = addressText;
+
+    setTimeout(() => window.print(), 800);
   </script>
 </body>
 </html>
