--- a/print.html
+++ b/print.html
@@ -4,18 +4,24 @@
   <meta charset="UTF-8" />
   <title>封筒印刷</title>
   <style>
+    @page {
+      size: 240mm 332mm;
+      margin: 0;
+    }
+
     body {
       margin: 0;
       padding: 0;
+      font-family: "MS PGothic", sans-serif;
     }
+
     #addressBox {
       position: absolute;
-      top: 40%;
-      left: 20%;
-      transform: translate(-20%, -40%);
-      font-size: 24px;
+      top: 100mm;       /* 宛名の上位置 */
+      left: 40mm;       /* 左端からの位置 */
+      font-size: 16pt;
+      line-height: 1.8;
       white-space: pre-line;
-      line-height: 1.6;
     }
   </style>
 </head>
@@ -24,25 +30,25 @@
 
   <script>
     function getParam(name) {
-      return decodeURIComponent(
-        (new URLSearchParams(window.location.search)).get(name) || ""
-      );
+      return decodeURIComponent((new URLSearchParams(window.location.search)).get(name) || "");
     }
 
     const postal = getParam("postal");
     const prefecture = getParam("pref");
     const city = getParam("city");
     const company = getParam("company");
+    const person = getParam("person");
 
-    if (postal || prefecture || city || company) {
-      const addressText = `〒${postal}\n${prefecture}${city}\n${company} 御中`;
-      document.getElementById("addressBox").innerText = addressText;
-
-      // 印刷実行
-      setTimeout(() => window.print(), 800);
+    let addressText = `〒${postal}\n${prefecture}${city}\n${company}`;
+    if (person) {
+      addressText += `\n${person} 様`;
     } else {
-      document.getElementById("addressBox").innerText = "パラメータが見つかりませんでした。";
+      addressText += ` 御中`;
     }
+
+    document.getElementById("addressBox").innerText = addressText;
+
+    setTimeout(() => window.print(), 800);
   </script>
 </body>
 </html>
