--- a/print.html
+++ b/print.html
@@ -5,7 +5,7 @@
   <title>封筒印刷</title>
   <style>
     @page {
-      size: 240mm 332mm;
+      size: 240mm 332mm; /* 角2封筒 */
       margin: 0;
     }
 
@@ -13,24 +13,49 @@
       margin: 0;
       padding: 0;
       font-family: "MS PGothic", sans-serif;
+      position: relative;
+      width: 240mm;
+      height: 332mm;
     }
 
-    #addressBox {
+    .postal {
       position: absolute;
-      top: 100mm;       /* 宛名の上位置 */
-      left: 40mm;       /* 左端からの位置 */
+      top: 40mm;
+      left: 130mm;
       font-size: 16pt;
-      line-height: 1.8;
+    }
+
+    .company {
+      position: absolute;
+      top: 80mm;
+      left: 70mm;
+      font-size: 20pt;
       white-space: pre-line;
+      line-height: 1.5;
+      text-align: left;
+    }
+
+    .address {
+      position: absolute;
+      top: 130mm;
+      left: 50mm;
+      font-size: 14pt;
+      white-space: pre-line;
+      line-height: 1.6;
     }
   </style>
 </head>
 <body>
-  <div id="addressBox">読み込み中...</div>
+
+  <div class="postal" id="postalBox">〒</div>
+  <div class="company" id="companyBox">会社名</div>
+  <div class="address" id="addressBox">住所</div>
 
   <script>
     function getParam(name) {
-      return decodeURIComponent((new URLSearchParams(window.location.search)).get(name) || "");
+      return decodeURIComponent(
+        (new URLSearchParams(window.location.search)).get(name) || ""
+      );
     }
 
     const postal = getParam("postal");
@@ -39,16 +64,19 @@
     const company = getParam("company");
     const person = getParam("person");
 
-    let addressText = `〒${postal}\n${prefecture}${city}\n${company}`;
-    if (person) {
-      addressText += `\n${person} 様`;
-    } else {
-      addressText += ` 御中`;
-    }
+    // 表示構成
+    const postalText = `〒${postal}`;
+    const companyText = person
+      ? `${company}\n${person} 様`
+      : `${company} 御中`;
+    const addressText = `${prefecture}${city}`;
 
+    document.getElementById("postalBox").innerText = postalText;
+    document.getElementById("companyBox").innerText = companyText;
     document.getElementById("addressBox").innerText = addressText;
 
     setTimeout(() => window.print(), 800);
   </script>
+
 </body>
 </html>
