--- a/print.html
+++ b/print.html
@@ -18,31 +18,31 @@
       position: relative;
     }
 
-    .postal {
-      position: absolute;
-      top: 35mm;
-      left: 150mm;
-      font-size: 16pt;
-    }
+.postal {
+  position: absolute;
+  top: 80px;
+  left: 480px;
+  font-size: 16pt;
+}
 
-    .company {
-      position: absolute;
-      top: 80mm;
-      left: 60mm;
-      font-size: 20pt;
-      white-space: pre-line;
-      line-height: 1.5;
-      text-align: left;
-    }
+.company {
+  position: absolute;
+  top: 180px;
+  left: 160px;
+  font-size: 20pt;
+  white-space: pre-line;
+  line-height: 1.5;
+}
 
-    .address {
-      position: absolute;
-      top: 130mm;
-      left: 60mm;
-      font-size: 14pt;
-      white-space: pre-line;
-      line-height: 1.6;
-    }
+.address {
+  position: absolute;
+  top: 320px;
+  left: 160px;
+  font-size: 14pt;
+  white-space: pre-line;
+  line-height: 1.6;
+}
+
   </style>
 </head>
 <body>
